tests/class_method_default_parameters/class_method_default_parameters.exp
Error --------------------------------- class_method_default_parameters.js:17:19

string is incompatible with number.



Found 1 error
